W2.Parser/alt/test/invalid/invalid7.c
//NOT ERROR FREE - This test case does not have the closing brace
#include<stdio.h>

int main()
{
    int a = 9;
